@@ -21,6 +21,7 @@ t/09case.t
 t/10delta.t
 t/11copy-ties-with-array-vals.t
 t/12open-empty-file.t
+t/13val-in-list-context.t
 
 t/array.ini
 t/ca.ini
