@@ -19,6 +19,14 @@ but not in CPAN.
 
 https://sourceforge.net/tracker/index.php?func=detail&aid=927111&group_id=6926&atid=106926
 
+* Added a fix for this bug:
+
+https://sourceforge.net/tracker/index.php?func=detail&aid=767913&group_id=6926&atid=106926
+
+With a test that I wrote myself: in list context, ->val() returned the list
+containing (undef()) if there was no such key. Now returning the empty
+list which evaluates to false.
+
 Revision 2.40  2003/12/08 10:33:13  domq
 Documentation tidyup
 
